# learnwithsarvesh-resources

./: README.md
cheat-sheets/: README.md
interview-preparation/: Interview_Questions.ipynb
sample-codes/: README.md
webinar-materials/: AI Resume Analyzer.ipynb  Customer Support Chatbot_Student.ipynb  PDF Document Summarizer (RAG Project).ipynb  README.md
webinar-materials/starter-kits/: README.md
webinar-materials/starter-kits/customer-support-chatbot/: README.md  pyproject.toml  requirements.txt
webinar-materials/starter-kits/customer-support-chatbot/data/: generate_faq.py
webinar-materials/starter-kits/customer-support-chatbot/scripts/: build_index.py  chat_cli.py
webinar-materials/starter-kits/customer-support-chatbot/src/customer_support_chatbot/: __init__.py  chatbot.py  config.py  knowledge_base.py
webinar-materials/starter-kits/rag-pdf-summarizer/: README.md  pyproject.toml  requirements.txt
webinar-materials/starter-kits/rag-pdf-summarizer/scripts/: build_index.py  chat_cli.py
webinar-materials/starter-kits/rag-pdf-summarizer/src/rag_pdf_summarizer/: __init__.py  config.py  indexer.py  qa.py
webinar-materials/starter-kits/resume-analyzer/: AI Resume Analyzer streamlit app.py  README.md  pyproject.toml  requirements.txt
webinar-materials/starter-kits/resume-analyzer/data/: job_description.txt
webinar-materials/starter-kits/resume-analyzer/scripts/: run_batch.py
webinar-materials/starter-kits/resume-analyzer/src/resume_analyzer/: __init__.py  config.py  io.py  pipeline.py  schemas.py
