[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-support-chatbot-starter"
version = "0.1.0"
description = "Starter kit for customer support RAG chatbot"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
